// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FocusRing /> snapshot should match snapshot 1`] = `
<FocusRing>
  <FocusRing
    focusClass="children"
    focusRingClass="md-focus-ring-wrapper children"
  >
    <button
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
    >
      Example
    </button>
  </FocusRing>
</FocusRing>
`;

exports[`<FocusRing /> snapshot should match snapshot when disabled 1`] = `
<FocusRing
  disabled={true}
>
  <FocusRing
    disabled={true}
    focusClass="md-focus-ring-wrapper-disabled"
    focusRingClass="md-focus-ring-wrapper-disabled"
  >
    <button
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
    >
      Example
    </button>
  </FocusRing>
</FocusRing>
`;
